Java/output.txt
code.java:5: error: ';' expected
System.out.print("My")
                      ^
1 error
